Adds foundational setup for data protection providers

--- a/EngineBay.DataProtection/EngineBay.DataProtection.csproj
+++ b/EngineBay.DataProtection/EngineBay.DataProtection.csproj
@@ -2,18 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>EngineBay.ModuleTemplate</RootNamespace>
+    <RootNamespace>EngineBay.DataProtection</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PackageId>EngineBay.ModuleTemplate</PackageId>
+    <PackageId>EngineBay.DataProtection</PackageId>
     <Version>0.0.0</Version>
     <Authors>EngineBay</Authors>
     <Company>EngineBay</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-    <PackageProjectUrl>https://github.com/engine-bay/module-template</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/engine-bay/module-template</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/engine-bay/data-protection</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/engine-bay/data-protection</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <TargetType>library</TargetType>
     <IsPackable>true</IsPackable>
@@ -29,6 +29,9 @@
 
   <ItemGroup>
     <PackageReference Include="EngineBay.Core" Version="5.9.0" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="7.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis"
+      Version="7.0.10" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -38,5 +41,5 @@
   <ItemGroup>
     <None Include="../README.md" Pack="true" PackagePath="\" />
     <None Include="../LICENSE.txt" Pack="true" PackagePath="" />
-</ItemGroup>
+  </ItemGroup>
 </Project>
