--- a/EngineBay.DataProtection.Tests/EngineBay.DataProtection.Tests.csproj
+++ b/EngineBay.DataProtection.Tests/EngineBay.DataProtection.Tests.csproj
@@ -2,10 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>EngineBay.ModuleTemplate.Tests</RootNamespace>
+    <RootNamespace>EngineBay.DataProtection.Tests</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -34,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EngineBay.ModuleTemplate\EngineBay.ModuleTemplate.csproj" />
+    <ProjectReference Include="..\EngineBay.DataProtection\EngineBay.DataProtection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
