--- a/EngineBay.DataProtection/EngineBay.DataProtection.csproj
+++ b/EngineBay.DataProtection/EngineBay.DataProtection.csproj
@@ -27,8 +27,14 @@
     <IsTrimmable>true</IsTrimmable>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="$(Configuration)=='Debug'">
+    <ProjectReference Include="../../core/EngineBay.Core/EngineBay.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup Condition="$(Configuration)!='Debug'">
     <PackageReference Include="EngineBay.Core" Version="6.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="7.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis"
       Version="7.0.10" />
