--- a/EngineBay.DataProtection/EngineBay.DataProtection.csproj
+++ b/EngineBay.DataProtection/EngineBay.DataProtection.csproj
@@ -35,15 +35,14 @@
 	</When>
   <Otherwise>
 	<ItemGroup>
-    <PackageReference Include="EngineBay.Core" Version="6.1.0" />
+    <PackageReference Include="EngineBay.Core" Version="6.2.5" />
     </ItemGroup>
   </Otherwise>
 	</Choose>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="7.0.10" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis"
-      Version="7.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="7.0.10" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
