--- a/EngineBay.DataProtection/EngineBay.DataProtection.csproj
+++ b/EngineBay.DataProtection/EngineBay.DataProtection.csproj
@@ -1,56 +1,57 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>EngineBay.DataProtection</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <PackageId>EngineBay.DataProtection</PackageId>
-    <Version>0.0.0</Version>
-    <Authors>EngineBay</Authors>
-    <Company>EngineBay</Company>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-    <PackageProjectUrl>https://github.com/engine-bay/data-protection</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/engine-bay/data-protection</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <TargetType>library</TargetType>
-    <IsPackable>true</IsPackable>
-    <OutputType>Library</OutputType>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net7.0</TargetFramework>
+        <RootNamespace>EngineBay.DataProtection</RootNamespace>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <PackageId>EngineBay.DataProtection</PackageId>
+        <Version>0.0.0</Version>
+        <Authors>EngineBay</Authors>
+        <Company>EngineBay</Company>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+        <PackageProjectUrl>https://github.com/engine-bay/data-protection</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/engine-bay/data-protection</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <TargetType>library</TargetType>
+        <IsPackable>true</IsPackable>
+        <OutputType>Library</OutputType>
+    </PropertyGroup>
 
-  <PropertyGroup>
-    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <IsTrimmable>true</IsTrimmable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <IsTrimmable>true</IsTrimmable>
+    </PropertyGroup>
 
-  <Choose>
-		<When Condition="'$(ASPNETCORE_ENVIRONMENT)' == 'Development'">
-			<ItemGroup>
-    <ProjectReference Include="../../core/EngineBay.Core/EngineBay.Core.csproj" />
-  </ItemGroup>
-	</When>
-  <Otherwise>
-	<ItemGroup>
-    <PackageReference Include="EngineBay.Core" Version="7.0.0" />
+    <Choose>
+        <When Condition="'$(ASPNETCORE_ENVIRONMENT)' == 'Development'">
+            <ItemGroup>
+                <ProjectReference Include="../../core/EngineBay.Core/EngineBay.Core.csproj" />
+            </ItemGroup>
+        </When>
+        <Otherwise>
+            <ItemGroup>
+                <PackageReference Include="EngineBay.Core" Version="7.0.4" />
+            </ItemGroup>
+        </Otherwise>
+    </Choose>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="7.0.10" />
+        <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis"
+            Version="7.0.10" />
+        <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
     </ItemGroup>
-  </Otherwise>
-	</Choose>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="7.0.10" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="7.0.10" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="../README.md" Pack="true" PackagePath="\" />
-    <None Include="../LICENSE.txt" Pack="true" PackagePath="" />
-  </ItemGroup>
+    <ItemGroup>
+        <None Include="../README.md" Pack="true" PackagePath="\" />
+        <None Include="../LICENSE.txt" Pack="true" PackagePath="" />
+    </ItemGroup>
 </Project>
